--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -83,7 +83,7 @@ Experiment 1 consisted of a series of screens on which participants saw two pict
 
 Each trial contained one semantically plausible picture, and one semantically implausible picture. On Exposure trials, these pictures, and their corresponding referring expressions were highly distinct (Figure~\ref{fig:exposure}). In contrast, on Test trials the two pictures corresponded to referring expressions that were only one consonant or vowel apart (Figure~\ref{fig:test}). Each participant saw eight Exposure trials, followed by seven Test trials. The order of these trials within each of these two blocks was randomized across participants, as was the on-screen position of the two pictures on trial. For participants in the Plausible Speaker condition, the speaker referred to Plausible referent on each of the eight exposure trials. In contrast, for participants in the Implausible Speaker condition, the speaker referred to the implausible referent on each Exposure trial. For participants in both conditions, the Speaker referred to the implausible referent on all eight test trials.
 
-For all participants, the experiment began with a short introduction to Katie, the speaker who would be referring to pictures for the remainder of the task. After this introduction, participants completed the remaining trials either, responding either with the mouse (adults), or by touching one of the pictures on an iPad (children). Adults were instructed by a series of text prompts, children were given instructions by a live experimenter.
+For all participants, the experiment began with a short introduction to Katie, the speaker who would be referring to pictures for the remainder of the task. After this introduction, participants completed the remaining trials either, responding either with the mouse (adults), or by touching one of the pictures on an iPad (children). Adults were instructed by a series of text prompts, children were given instructions by a live experimenter.\footnote{For a small subset of participants (N=CHECKME), a software bug meant that responses were not tracked automatically and were post-coded from videotapes}
 
 \subsection{Results}
 
