--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -95,7 +95,7 @@ First, we ask whether participants selected the correct referent in each conditi
      \begin{center}
      \includegraphics[width=\textwidth]{figures/exp1_results.pdf}
     \end{center}
-    \caption{Experiment 1 test trial selections for both children and adults. In line with the predictions of a noisy channel model of language processing, both children and adults were more likely to correct the phonological error during test trials when they were previously exposed to a plausible speaker. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance perfromance.}%
+    \caption{Experiment 1 test trial selections for both children and adults. In line with the predictions of a noisy channel model of language processing, both children and adults were more likely to correct the phonological error during test trials when they were previously exposed to a plausible speaker. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
    \label{fig:exp1_results}
 \end{figure}
 
@@ -127,7 +127,7 @@ As in Experiment 1, we first establish that children understood the task, and en
      \begin{center}
      \includegraphics[width=\textwidth]{figures/exp2_results.pdf}
     \end{center}
-    \caption{Experiment 2 results}%
+    \caption{Experiment 2 Test trial responses. Replicating Experiment 1, children were more likely to correct the phonological error during test trials when they were previously exposed to a plausible speaker. In in both conditions children were more likely to correct the error when the speech was noisier. Finally, children in a control condition in which a previously Implausible speaker referred to plausible referents during ambiguous Test trials reliably selected the plausible referent. Together, these results show that children adaptively integrate both bottom-up acoustic information and top-down expectations about the speaker when processing language. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
    \label{fig:exp2_results}
 \end{figure}
 
