--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -48,7 +48,7 @@ Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she v
 
 Noisy channel principles provide a powerful framework for explaining how the human language processing system operates in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of human language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of this kind of integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (e.g., the omission of the word ``to''). Adult comprehenders were able to correct these errors, and critically corrected them at higher rates when they had reason to believe that the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, they corrected these errors at lower rates when they believed they were in a ``silly'' context where many of the sentences they read were similarly implausible. Together, these resutls suggested a flexible weighting on the perceptual signal---channel noise---and prior expectations---speaker plausibility. 
 
-Do children also do the same kind of flexible, expectation-based language processing? Prior research on this topic is mixed. On one hand, infants and toddlers already make use of speakers' social and pragmatic cues to reference to shape their expectations about linguistic meaning \cite{clark2009, carpenter1998}. And preschoolers show evidence of encoding stable features like the reliability of individual speakers, a clear prerequisite for forming communicative expectations \cite{koenig2004, harris2012}. On the other hand, children at the same ages sometimes show striking deficits in inferring speakers' intended meaning---and revising incorrect expectations about meaning---in cases where syntax \cite{trueswell1999} and semantics \cite{noveck2001} are ambiguous. Our current experiments thus attempt to make a test whether young children flexibly integrate expectations about speakers with the noise in a communicative channel. 
+Do children also do the same kind of flexible, expectation-based language processing? Prior research on this topic is mixed. On one hand, infants and toddlers already make use of speakers' social and pragmatic cues to reference to shape their expectations about linguistic meaning \cite{clark2009, carpenter1998}. And preschoolers show evidence of encoding stable features like the reliability of individual speakers, a clear prerequisite for forming communicative expectations \cite{koenig2004, harris2012}. On the other hand, children at the same ages sometimes show striking deficits in inferring speakers' intended meaning---and revising incorrect expectations about meaning---in cases where syntax \cite{trueswell1999} and semantics \cite{noveck2001} are ambiguous. But all of these examples take place in complex contexts and were designed to test the development of other abilities; none was designed to make a direct and straightforward test of expectation-based integration in the absence of other processing demands. Our current experiments thus attempt to make such a test of whether young children flexibly integrate expectations about speakers with the noise in a communicative channel. 
 
 We created a paradigm that allowed us to manipulate both expectations about a speaker's plausibility and perceptual noise. We introduced four- and five-year-old children (and adults) to either a plausible or implausible speaker, who initially uttered unambiguous sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). We then asked participants to resolve the intended meaning for ambiguous sentences such as the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content (Figure \ref{fig:test}). We predicted that, if children are able to integrate speaker expectations and channel noise, then their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate the findings of Experiment 1 and cross these with a manipulation of channel noise. The results of these two experiments support the idea that children, as well as adults, show evidence of flexibly trading off between information sources in language comprehension.
 
