tweaks during meeitng

--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -92,16 +92,15 @@ In order to validate our manipulation, we first analyze the effect of the Speake
 First, we ask whether participants selected the correct referent in each condition at levels different from chance. We submitted performance for each group and condition separately to a mixed-effects logistic regression with random effects of subject and trial. Both children and adults were significantly more likely to choose the plausible referent in the Plausible condition ($\beta_{adult} = 5.66$, $z = 6.76$, $p <.001$; $\beta_{child} = 2.62$, $z = 5.43$, $p <.001$), and significantly less likely than chance to choose the plausible referent in the Implausible condition ($\beta_{adult} = -3.87$, $z = -7.13$, $p <.001$; $\beta_{child} = -1.9$, $z = 5.61$, $p <.001$). Second, we compared performance across conditions, fiting a mixed-effects regression predicting choice on Exposure trials from group, condition, and their interaction, and found significant effects of all three ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child\: x \: condition} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible, although adults selected the correct referent more often in both conditions.
 
 \begin{figure}[t]
-     \begin{center}
-     \includegraphics[width=\textwidth]{figures/exp1_results.pdf}
-    \end{center}
+\centering
+     \includegraphics[width=5in]{figures/exp1_results.pdf}
     \caption{Experiment 1 test trial selections for both children and adults. In line with the predictions of a noisy channel model of language processing, both children and adults were more likely to correct the phonological error during test trials when they were previously exposed to a plausible speaker. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
    \label{fig:exp1_results}
 \end{figure}
 
 Did this exposure to a Plausible vs. Implausible speaker change participants' expectations during the ambiguous test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition. While children children were overall more likely to pick the plausible referent in both conditions, the size of the difference between conditions was comparable in adults and children, indicating equal sensitivity to the difference between speakers. To confirm these findings formally, we again fit a mixed effects regression predicting choice on test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction. Both of the main effects were significant, but the interaction was not, indicating that both children and adults  ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: x \: condition} = -1.01$,  $z = -1.53$, $p = .13$).
 
-When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), the were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was comparable in both groups, suggesting that preschoolers are already adapting as rapidly and as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}.
+When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), the were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was similar in both groups (d = CHECKME, d = CHECKME), suggesting that preschoolers are already adapting as rapidly and as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}.
 
 \section{Experiment 2}
 
@@ -119,24 +118,23 @@ Children for Experiment 2 were recruited from the floor of the San Jose Children
 
 Stimuli were constructed as in Experiment 1 with a few small changes. First, one additional test trial was added to increase power. Second, two versions of each acoustic recording were made. One was recorded in a sound-proof room by a female native English speaker as before. The second was constructed by convolving each recording with randomly generated Brown noise with an amplitude of .7. The first was used in the No Noise conditions, the second was used to replicate the two conditions from Experiment 1 as well as for the Control condition.
 
-\subsection{Results and Discussion}
+\subsection{Results}
 
 As in Experiment 1, we first establish that children understood the task, and encoded the differences between the Plausible and Implausible speakers during Exposure trials. First, we ask whether participants selected the plausible referent when it was asked for by the Plausible speaker, and selected the implausible referent when it was asked for by the Implausible speaker independent of noise level. We submitted performance for each condition and noise level separately to a mixed-effects logistic regression with random effects of subject and trial. 
 
-\begin{figure}[tb]
-     \begin{center}
-     \includegraphics[width=\textwidth]{figures/exp2_results.pdf}
-    \end{center}
-    \caption{Experiment 2 Test trial responses. Replicating Experiment 1, children were more likely to correct the phonological error during test trials when they were previously exposed to a plausible speaker. In in both conditions children were more likely to correct the error when the speech was noisier. Finally, children in a control condition in which a previously Implausible speaker referred to plausible referents during ambiguous Test trials reliably selected the plausible referent. Together, these results show that children adaptively integrate both bottom-up acoustic information and top-down expectations about the speaker when processing language. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
+As before, children were more likely than chance to choose the plausible referent in the Plausible condition, but less likely than chance to choose the plausible referent when the speaker asked for the implausible referent (smallest $\beta_{Control} = -.153$, $z = -4.32$, p < .001). Second, we again compared the conditions to each other, fitting a mixed-effects regression predicting choice on Exposure trials noise condition (Implausible, Plausible, Control). Compared to the Implausible Speaker condition, children exposed to the Plausible Speaker were more likely to pick the Implausible referent on Exposure trials ($\beta_{Plausible} = 6.62$,  $z = 8.88$, $p <.001$). Children exposed to the Control speaker, who was identical to the Implausible speaker on Exposure trials, were not significantly different as predicted ($\beta_{Control} = .36$,  $z = .83$, $p = .42$). Further, the model showed a marginal effect of Noise level ($\beta_{Noisy} = .86$,  $z = 1.74$, $p = .08$) and a significant interaction between Noise level and Speaker ($\beta_{Plausible \: x \: Noisy} = -1.71$, $z= -2.15$, $p = .03$), indicating that the addition of noise moved children in both conditions closer to chance as expected.
+
+
+\begin{figure}[t]
+     \centering
+     \includegraphics[width=5in]{figures/exp2_results.pdf}
+    \caption{Experiment 2 Test trial responses. Replicating Experiment 1, children were more likely to correct the phonological error during test trials when they were previously exposed to a plausible speaker. In both conditions children were more likely to correct the error when the speech was noisier. Finally, children in a control condition in which a previously Implausible speaker referred to \emph{plausible} referents during ambiguous Test trials reliably selected the plausible referent. Together, these results show that children adaptively integrate both bottom-up acoustic information and top-down expectations about the speaker when processing language. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
    \label{fig:exp2_results}
 \end{figure}
 
+Did children integrate noise level of the acoustic stimuli with Speaker expectations on the ambiguous test trials? Figure~\ref{fig:exp2_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions and under both noise conditions. As predicted, children showed sensitivity to both Speaker reliability and acoustic noise. Children selected the plausible referent at test, correcting the error in their acoustic input, more often when the Speaker had said plausible things on Exposure trials (as in Experiment 1). In addition, regardless of Speaker plausibility, children selected the plausible referent more frequently when the acoustic input was noisy. To quantify this pattern, we again fit a mixed effects regression predicting choice on test trials from Speaker type and Noise level as well as their interaction. As predicted, both main effects were significant ($\beta_{1.20} = 1.96$,  $z = 3.20$, $p <.001$, $\beta_{Noisy} = .81$,  $z = 2.21$, $p = .03$), but their interaction was not ($\beta_{Plausible :\ x :\ Noisy} = .33$,  $z = .65$, $p = .51$).
 
-As before, children were more likely than chance to choose the plausible referent in the Plausible condition, but less likely than chance to choose the plausible referent when the speaker asked for the implausible referent (smallest $\beta_{Control} = -.153$, $z = -4.32$, p < .001). Second, we again compared the conditions to each other, fitting a mixed-effects regression predicting choice on Exposure trials noise condition (Implausible, Plausible, Control). Compared to the Implausible Speaker condition, children exposed to the Plausible Speaker were more likely to pick the Implausible referent on Exposure trials ($\beta_{Plausible} = 6.62$,  $z = 8.88$, $p <.001$). Children exposed to the Control speaker, who was identical to the Implausible speaker on Exposure trials, were not significantly different as predicted ($\beta_{Control} = .36$,  $z = .83$, $p = .42$). Further, the model showed a marginal effect of Noise level ($\beta_{Noisy} = .86$,  $z = 1.74$, $p = .08$) and a significant interaction between Noise level and Speaker ($\beta_{Plausible \: x \: Noisy} = -1.71$, $z= -2.15$, $p = .03$), indicating that the addition of noise moved children in both conditions closer to chance as expected.
-
-Did children integrate noise level of the acoustic stimuli with Speaker expectations on the ambiguous test trials? Figure~\ref{fig:exp2_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions and under both noise conditions. As predicted, children showed sensitivity to both Speaker reliability and acoustic noise. Children selected the plausible referent at test, correcting the error in their acoustic input, more often when the Speaker had said plausible things on Exposure trials (as in Experiment 1). In addition, regardless of Speaker plausibility, children selected the plausible referent more frequently when the acoustic input was noisy. To confirm these findings formally, we again fit a mixed effects regression predicting choice on test trials from Speaker type and Noise level as well as their interaction. As predicted, both main effects were significant ($\beta_{1.20} = 1.96$,  $z = 3.20$, $p <.001$, $\beta_{Noisy} = .81$,  $z = 2.21$, $p = .03$), but their interaction was not ($\beta_{Plausible :\ x :\ Noisy} = .33$,  $z = .65$, $p = .51$).
-
-Finally, we asked whether children who were responded to an Implausible speaker on Exposure trials always chose the implausible referent on test trials even when the speaker referred to the plausible referent. A mixed effects model estimating plausible referent on Test trials showed that compared to the Plausible speaker, children exposed to the Implausible speaker were less likely to pick the plausible referent ($\beta_{Implausible} = -1.57$,  $z = -4.14$, $p <.001$), but children in the control condition were \emph{more} likely to select the plausible referent ($\beta_{Control} = 1.06$,  $z = 2.05$, $p = .04$). Thus, children who were asked for the plausible referent at test selected it, even when the speaker had previously always referred to the implausible referent. This is further evidence that children were attending to and responding to the acoustic input from the speaker on Test trials and not just relying on expectations.
+Finally, one alternative explanation was that children simply followed their expectations at all times, e.g., that the experiment rewarded ``silly'' responses regardless of the question. To test this alternative, we asked whether children who were responded to an Implausible speaker on Exposure trials always chose the implausible referent on test trials even when the speaker referred to the \emph{plausible} referent (Implausible Control condition). A mixed effects model estimating plausible referent on Test trials showed that compared to the Plausible speaker, children exposed to the Implausible speaker were less likely to pick the plausible referent ($\beta_{Implausible} = -1.57$,  $z = -4.14$, $p <.001$), but children in the control condition were \emph{more} likely to select the plausible referent ($\beta_{Control} = 1.06$,  $z = 2.05$, $p = .04$). Thus, children who were asked for the plausible referent at test selected it, even when the speaker had only previously referred to the implausible referent. This control condition provides further evidence that children were attending to and responding to the acoustic input from the speaker on Test trials and not just relying on their prior expectations.
 
 
 \section{General Discussion}
@@ -153,7 +151,7 @@ The end!
 
 \section{Acknowledgments}
 
-We are grateful to Nicolette Castro for collecting the bulk of the child data, and all of the members of the Language and Cognition Lab for their feedback on this project. In addition, we thank the parents, children, and staff at the San Jose Children's Discovery Museum for supporting us in collecting developmental data. This work was supported by NIH NRSA F32HD075577 to DY as well as grants from the Merck Scholars Foundation and the Stanford Center Health Research Initiative to MCF.
+Thanks to Nicolette Castro for data collection. This work was supported by NIH NRSA F32HD075577 to DY and a John Merck Scholars Fellowship to MCF.
 
 \bibliographystyle{apacite}
 \bibliography{noisy_kids}
